--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "axios": "^0.19.0",
         "better-scroll": "^1.15.2",
+        "http-proxy-middleware": "^0.19.1",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "react-redux": "^7.1.0",
@@ -37,6 +39,5 @@
     },
     "devDependencies": {
         "node-sass": "^4.12.0"
-    },
-    "proxy": "http://localhost:8000"
+    }
 }
